pgadmin4/pgadmin-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: pgadmin
  name: pgadmin
  namespace: saas
spec:
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - image: dpage/pgadmin4
        imagePullPolicy: Always
        name: pgadmin4
